Issue #60: Tweaked css so scroll bars are more visible

--- a/src/main/resources/less/annotation.less
+++ b/src/main/resources/less/annotation.less
@@ -288,13 +288,21 @@
   -fx-background-radius: 0;
 }
 
-.scroll-bar .slider {
+.scroll-bar .thumb {
   -fx-background-color: @default-compliment-color-light;
 }
 
-.scroll-bar:hover .slider {
-  -fx-background-color: @emphasis-color;
+.scroll-bar:hover .thumb {
+  -fx-background-color: @selected-color;
 }
+
+//.scroll-bar .slider {
+//  -fx-background-color: @default-compliment-color-light;
+//}
+//
+//.scroll-bar:hover .slider {
+//  -fx-background-color: @emphasis-color;
+//}
 
 .spinner, .increment-arrow-button, .decrement-arrow-button {
   -fx-background-color: @default-color;
